--- a/index.html
+++ b/index.html
@@ -155,29 +155,31 @@
             max-width: 50px;
         }
 
-        .results-container {
+       .results-container {
     width: 100%;
     background: white;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     margin-bottom: 20px;
-    overflow-x: hidden; /* Mantém escondido qualquer overflow */
+    overflow-x: hidden; /* Remove a rolagem horizontal */
 }
 
-        table {
-    width: 100%; /* Ocupa 100% do container */
+table {
+    width: 100%;
     border-collapse: collapse;
     margin-top: 15px;
-    /* Remova o min-width: 600px */
+    /* Removemos o min-width para que a tabela não force uma largura mínima */
 }
 
-        th, td {
-            padding: 12px;
-            text-align: left;
-            border-bottom: 1px solid #eee;
-            font-size: 14px;
-        }
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #eee;
+    font-size: 12px;
+    white-space: normal; /* Permite quebra de linha */
+    word-break: break-word; /* Quebra palavras longas se necessário */
+}
 
         th {
             background-color: var(--primary-color);
@@ -392,9 +394,19 @@
             }
 
              th, td {
-        padding: 8px; /* Reduz o padding */
-        font-size: 12px; /* Reduz o tamanho da fonte */
+        padding: 6px;
+        font-size: 11px;
+        display: block; /* Transforma em layout de bloco (opcional) */
+    
+
+    /* Se preferir manter o layout de tabela mas ajustar conteúdo: */
+    /*
+    th, td {
+        max-width: 100px; /* Limita largura das células */
+        overflow: hidden;
+        text-overflow: ellipsis; /* Adiciona "..." se o texto for muito longo */
     }
+    
 
             .sidebar {
                 width: 16%;
@@ -725,7 +737,7 @@
     {
       "id": "7",
       "type": "grande",
-      "x": 102,
+      "x": 63,
       "y": 626,
       "rotation": 90,
       "products": {}
@@ -733,7 +745,7 @@
     {
       "id": "8",
       "type": "grande",
-      "x": 101,
+      "x": 63,
       "y": 525,
       "rotation": 90,
       "products": {}
@@ -741,7 +753,7 @@
     {
       "id": "9",
       "type": "grande",
-      "x": 101,
+      "x": 63,
       "y": 424,
       "rotation": 90,
       "products": {}
@@ -749,7 +761,7 @@
     {
       "id": "10",
       "type": "grande",
-      "x": 101,
+      "x": 63,
       "y": 323,
       "rotation": 90,
       "products": {}
@@ -757,7 +769,7 @@
     {
       "id": "11",
       "type": "grande",
-      "x": 101,
+      "x": 63,
       "y": 221,
       "rotation": 90,
       "products": {}
@@ -765,7 +777,7 @@
     {
       "id": "12",
       "type": "grande",
-      "x": 100,
+      "x": 63,
       "y": 120,
       "rotation": 90,
       "products": {}
@@ -773,7 +785,7 @@
     {
       "id": "13",
       "type": "grande",
-      "x": 163,
+      "x": 161,
       "y": 626,
       "rotation": 270,
       "products": {}
@@ -781,7 +793,7 @@
     {
       "id": "14",
       "type": "grande",
-      "x": 162,
+      "x": 161,
       "y": 525,
       "rotation": 270,
       "products": {}
@@ -789,7 +801,7 @@
     {
       "id": "15",
       "type": "grande",
-      "x": 162,
+      "x": 161,
       "y": 423,
       "rotation": 270,
       "products": {}
@@ -797,7 +809,7 @@
     {
       "id": "16",
       "type": "grande",
-      "x": 163,
+      "x": 161,
       "y": 322,
       "rotation": 270,
       "products": {}
@@ -805,7 +817,7 @@
     {
       "id": "17",
       "type": "grande",
-      "x": 163,
+      "x": 161,
       "y": 220,
       "rotation": 270,
       "products": {}
