--- a/adicionar.html
+++ b/adicionar.html
@@ -763,7 +763,7 @@
     <script>
         // Configuração da API - SUBSTITUA PELA URL PÚBLICA DO SEU SERVIDOR NO RAILWAY
         // Exemplo: const API_BASE_URL = 'https://estoque0127-production.up.railway.app';
-        const API_BASE_URL = 'https://estoque0127-production.up.railway.app'; // ALTERE ESTA URL PARA SUA URL PÚBLICA DO RAILWAY
+        const API_BASE_URL = 'https://estoque0127.railway.internal'; // ALTERE ESTA URL PARA SUA URL PÚBLICA DO RAILWAY
 
         // Objeto estoque127 com o layout criado
         const estoque127 = {
