--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <div class="sidebar">
             <div class="logo">
                 <div class="logo-placeholder">
-                    <i class="fas fa-boxes"></i>
+                    <img src="35468547.png" alt="">
                 </div>
             </div>
             
