--- a/adicionar.html
+++ b/adicionar.html
@@ -673,8 +673,8 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="logo">
-                <div class="logo-placeholder">
-                    <i class="fas fa-boxes"></i>
+                <div class="logo2548">
+                    <img src="777777.png" alt="">
                 </div>
             </div>
             
