--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="logo">
-                <div class="logo-placeholder">
+                <div class="logo54564">
                     <img src="777777.png" alt="">
                 </div>
             </div>
