--- a/criarestoque.html
+++ b/criarestoque.html
@@ -293,7 +293,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="logo">
-                <img src="d7f55c03-70f4-42be-9805-393122158e69___c038bed40f3763fc3be4ff844f7483ec.png" alt="Logo">
+                <img src="777777.png" alt="Logo">
             </div>
             
             <ul class="nav-menu">
