--- a/index.html
+++ b/index.html
@@ -562,7 +562,6 @@
         // Variável para armazenar os resultados atuais
         let resultadosAtuais = [];
 
-        // Objeto estoque127 com o layout criado
         const estoque127 = {
   "dimensions": {
     "width": 680,
@@ -788,64 +787,64 @@
     {
       "id": "cabinet-28",
       "type": "pequeno",
-      "x": 170.90625,
-      "y": 1549.9063415527344,
+      "x": 170.70001220703125,
+      "y": 1553.7000122070312,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-29",
       "type": "pequeno",
-      "x": 170.90625,
-      "y": 1508.9063415527344,
+      "x": 169.70001220703125,
+      "y": 1511.6999816894531,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-30",
       "type": "pequeno",
-      "x": 171.00625610351562,
-      "y": 1468.006332397461,
+      "x": 169.80001831054688,
+      "y": 1470.7999877929688,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-31",
       "type": "pequeno",
-      "x": 172.0187530517578,
-      "y": 1427.0125732421875,
+      "x": 169.8125,
+      "y": 1428.8125,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-32",
       "type": "pequeno",
-      "x": 171.0187530517578,
-      "y": 1386.0063171386719,
+      "x": 169.8125,
+      "y": 1387.7999877929688,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-33",
       "type": "pequeno",
-      "x": 171.90625,
-      "y": 1344.9063262939453,
+      "x": 168.70001220703125,
+      "y": 1346.6999816894531,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-34",
       "type": "pequeno",
-      "x": 171.90625,
-      "y": 1303.9063415527344,
+      "x": 169.70001220703125,
+      "y": 1304.6999816894531,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-35",
       "type": "pequeno",
-      "x": 171.90625,
-      "y": 1262.9063415527344,
+      "x": 169.70001220703125,
+      "y": 1263.6999816894531,
       "rotation": 90,
       "products": {}
     },
@@ -892,8 +891,8 @@
     {
       "id": "cabinet-41",
       "type": "pequeno",
-      "x": 171.90625,
-      "y": 1016.9062805175781,
+      "x": 171.70001220703125,
+      "y": 1016.6999969482422,
       "rotation": 90,
       "products": {}
     },
@@ -1108,8 +1107,8 @@
     {
       "id": "cabinet-68",
       "type": "pequeno",
-      "x": 232.70626831054688,
-      "y": 1017.7062683105469,
+      "x": 233.703125,
+      "y": 1017.703125,
       "rotation": 270,
       "products": {}
     },
@@ -1132,32 +1131,32 @@
     {
       "id": "cabinet-71",
       "type": "pequeno",
-      "x": 232.91876220703125,
-      "y": 894.9250183105469,
+      "x": 236.90625,
+      "y": 894.921875,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-72",
       "type": "pequeno",
-      "x": 233.60626220703125,
-      "y": 853.6187591552734,
+      "x": 236.59375,
+      "y": 853.609375,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-73",
       "type": "pequeno",
-      "x": 233.50625610351562,
-      "y": 812.5062637329102,
+      "x": 235.5,
+      "y": 812.5,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-74",
       "type": "pequeno",
-      "x": 233.70626831054688,
-      "y": 771.7062644958496,
+      "x": 236.703125,
+      "y": 771.703125,
       "rotation": 270,
       "products": {}
     },
@@ -1220,8 +1219,8 @@
     {
       "id": "cabinet-82",
       "type": "grande",
-      "x": 343.25006103515625,
-      "y": 1085.2500305175781,
+      "x": 343.25,
+      "y": 1086.25,
       "rotation": 90,
       "products": {}
     },
@@ -1300,16 +1299,16 @@
     {
       "id": "cabinet-92",
       "type": "grande",
-      "x": 404.6785888671875,
-      "y": 1085.6786193847656,
+      "x": 405.671875,
+      "y": 1085.671875,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-93",
       "type": "grande",
-      "x": 403.6785888671875,
-      "y": 984.6786193847656,
+      "x": 405.671875,
+      "y": 983.671875,
       "rotation": 90,
       "products": {}
     },
@@ -1467,6 +1466,8 @@
     }
   ]
 };
+
+// Para usar na página principal, cole este código
 
 // Para usar na página principal, cole este código
 
