--- a/index.html
+++ b/index.html
@@ -787,72 +787,72 @@
     {
       "id": "cabinet-28",
       "type": "pequeno",
-      "x": 170.70001220703125,
-      "y": 1553.7000122070312,
+      "x": 171.5,
+      "y": 1550.5,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-29",
       "type": "pequeno",
-      "x": 169.70001220703125,
-      "y": 1511.6999816894531,
+      "x": 171.5,
+      "y": 1509.5,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-30",
       "type": "pequeno",
-      "x": 169.80001831054688,
-      "y": 1470.7999877929688,
+      "x": 171.59375,
+      "y": 1468.59375,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-31",
       "type": "pequeno",
-      "x": 169.8125,
-      "y": 1428.8125,
+      "x": 171.609375,
+      "y": 1427.609375,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-32",
       "type": "pequeno",
-      "x": 169.8125,
-      "y": 1387.7999877929688,
+      "x": 171.609375,
+      "y": 1386.59375,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-33",
       "type": "pequeno",
-      "x": 168.70001220703125,
-      "y": 1346.6999816894531,
+      "x": 171.5,
+      "y": 1345.5,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-34",
       "type": "pequeno",
-      "x": 169.70001220703125,
-      "y": 1304.6999816894531,
+      "x": 171.5,
+      "y": 1304.5,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-35",
       "type": "pequeno",
-      "x": 169.70001220703125,
-      "y": 1263.6999816894531,
+      "x": 171.5,
+      "y": 1263.5,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-36",
       "type": "pequeno",
-      "x": 172.0124969482422,
-      "y": 1222.0188293457031,
+      "x": 172.0078125,
+      "y": 1223.015625,
       "rotation": 90,
       "products": {}
     },
@@ -860,23 +860,23 @@
       "id": "cabinet-37",
       "type": "pequeno",
       "x": 171.90625,
-      "y": 1180.9063415527344,
+      "y": 1181.90625,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-38",
       "type": "pequeno",
-      "x": 171.7062530517578,
-      "y": 1139.7063217163086,
+      "x": 171.703125,
+      "y": 1141.703125,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-39",
       "type": "pequeno",
-      "x": 171.90625,
-      "y": 1098.906265258789,
+      "x": 170.90625,
+      "y": 1099.90625,
       "rotation": 90,
       "products": {}
     },
@@ -884,15 +884,15 @@
       "id": "cabinet-40",
       "type": "pequeno",
       "x": 171.90625,
-      "y": 1057.9062805175781,
+      "y": 1058.90625,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-41",
       "type": "pequeno",
-      "x": 171.70001220703125,
-      "y": 1016.6999969482422,
+      "x": 172.6953125,
+      "y": 1017.6953125,
       "rotation": 90,
       "products": {}
     },
@@ -1131,32 +1131,32 @@
     {
       "id": "cabinet-71",
       "type": "pequeno",
-      "x": 236.90625,
-      "y": 894.921875,
+      "x": 234.5,
+      "y": 894.5124969482422,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-72",
       "type": "pequeno",
-      "x": 236.59375,
-      "y": 853.609375,
+      "x": 234.39376831054688,
+      "y": 853.4062347412109,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-73",
       "type": "pequeno",
-      "x": 235.5,
-      "y": 812.5,
+      "x": 234.30001831054688,
+      "y": 812.2999877929688,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-74",
       "type": "pequeno",
-      "x": 236.703125,
-      "y": 771.703125,
+      "x": 234.5,
+      "y": 771.4999847412109,
       "rotation": 270,
       "products": {}
     },
@@ -1467,6 +1467,7 @@
   ]
 };
 
+// Para usar na página principal, cole este código
 // Para usar na página principal, cole este código
 
 // Para usar na página principal, cole este código
