--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
         // Variável para armazenar os resultados atuais
         let resultadosAtuais = [];
 
-        const estoque127 = {
+       const estoque127 = {
   "dimensions": {
     "width": 680,
     "height": 2500
@@ -787,64 +787,64 @@
     {
       "id": "cabinet-28",
       "type": "pequeno",
-      "x": 171.5,
-      "y": 1550.5,
+      "x": 170.83334350585938,
+      "y": 1557.8333740234375,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-29",
       "type": "pequeno",
-      "x": 171.5,
-      "y": 1509.5,
+      "x": 170.83334350585938,
+      "y": 1515.8333740234375,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-30",
       "type": "pequeno",
-      "x": 171.59375,
-      "y": 1468.59375,
+      "x": 170.92709350585938,
+      "y": 1473.9271240234375,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-31",
       "type": "pequeno",
-      "x": 171.609375,
-      "y": 1427.609375,
+      "x": 170.9375,
+      "y": 1431.9375457763672,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-32",
       "type": "pequeno",
-      "x": 171.609375,
-      "y": 1386.59375,
+      "x": 170.9375,
+      "y": 1389.9270935058594,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-33",
       "type": "pequeno",
-      "x": 171.5,
-      "y": 1345.5,
+      "x": 170.83334350585938,
+      "y": 1347.8333435058594,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-34",
       "type": "pequeno",
-      "x": 171.5,
-      "y": 1304.5,
+      "x": 170.83334350585938,
+      "y": 1306.8333435058594,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-35",
       "type": "pequeno",
-      "x": 171.5,
-      "y": 1263.5,
+      "x": 172.16668701171875,
+      "y": 1265.1667175292969,
       "rotation": 90,
       "products": {}
     },
@@ -867,8 +867,8 @@
     {
       "id": "cabinet-38",
       "type": "pequeno",
-      "x": 171.703125,
-      "y": 1141.703125,
+      "x": 170.36459350585938,
+      "y": 1141.3645935058594,
       "rotation": 90,
       "products": {}
     },
@@ -1003,48 +1003,48 @@
     {
       "id": "cabinet-55",
       "type": "pequeno",
-      "x": 231.90625,
-      "y": 1550.9063415527344,
+      "x": 232.57293701171875,
+      "y": 1557.572998046875,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-56",
       "type": "pequeno",
-      "x": 232.11874389648438,
-      "y": 1510.1250762939453,
+      "x": 232.78125,
+      "y": 1515.7917175292969,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-57",
       "type": "pequeno",
-      "x": 231.90625,
-      "y": 1468.9063262939453,
+      "x": 233.57293701171875,
+      "y": 1473.5729675292969,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-58",
       "type": "pequeno",
-      "x": 232.01876831054688,
-      "y": 1428.0125732421875,
+      "x": 231.6771240234375,
+      "y": 1430.6771240234375,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-59",
       "type": "pequeno",
-      "x": 232.00625610351562,
-      "y": 1387.0125732421875,
+      "x": 232.3333740234375,
+      "y": 1389.3438110351562,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-60",
       "type": "pequeno",
-      "x": 232.00625610351562,
-      "y": 1346.0188293457031,
+      "x": 231.66668701171875,
+      "y": 1347.6771240234375,
       "rotation": 270,
       "products": {}
     },
@@ -1466,6 +1466,8 @@
     }
   ]
 };
+
+// Para usar na página principal, cole este código
 
 // Para usar na página principal, cole este código
 // Para usar na página principal, cole este código
