--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
         // Variável para armazenar os resultados atuais
         let resultadosAtuais = [];
 
-       const estoque127 = {
+      const estoque127 = {
   "dimensions": {
     "width": 680,
     "height": 2500
@@ -843,8 +843,8 @@
     {
       "id": "cabinet-35",
       "type": "pequeno",
-      "x": 172.16668701171875,
-      "y": 1265.1667175292969,
+      "x": 169.83334350585938,
+      "y": 1264.8333740234375,
       "rotation": 90,
       "products": {}
     },
@@ -939,16 +939,16 @@
     {
       "id": "cabinet-47",
       "type": "pequeno",
-      "x": 172.80625915527344,
-      "y": 771.8125152587891,
+      "x": 172.46875,
+      "y": 769.4791870117188,
       "rotation": 90,
       "products": {}
     },
     {
       "id": "cabinet-48",
       "type": "pequeno",
-      "x": 173.00625610351562,
-      "y": 731.0125122070312,
+      "x": 171.66668701171875,
+      "y": 727.6770935058594,
       "rotation": 90,
       "products": {}
     },
@@ -1115,16 +1115,16 @@
     {
       "id": "cabinet-69",
       "type": "pequeno",
-      "x": 232.90625,
-      "y": 976.9062652587891,
+      "x": 234.57293701171875,
+      "y": 976.5729675292969,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-70",
       "type": "pequeno",
-      "x": 232.90625,
-      "y": 935.9062652587891,
+      "x": 234.57293701171875,
+      "y": 935.5729675292969,
       "rotation": 270,
       "products": {}
     },
@@ -1155,16 +1155,16 @@
     {
       "id": "cabinet-74",
       "type": "pequeno",
-      "x": 234.5,
-      "y": 771.4999847412109,
+      "x": 235.16668701171875,
+      "y": 769.1666870117188,
       "rotation": 270,
       "products": {}
     },
     {
       "id": "cabinet-75",
       "type": "pequeno",
-      "x": 233.80624389648438,
-      "y": 730.8062591552734,
+      "x": 233.46875,
+      "y": 727.46875,
       "rotation": 270,
       "products": {}
     },
@@ -1331,8 +1331,8 @@
     {
       "id": "cabinet-96",
       "type": "grande",
-      "x": 403.6785888671875,
-      "y": 626.6786193847656,
+      "x": 405.671875,
+      "y": 626.671875,
       "rotation": 90,
       "products": {}
     },
@@ -1466,6 +1466,8 @@
     }
   ]
 };
+
+// Para usar na página principal, cole este código
 
 // Para usar na página principal, cole este código
 
