--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
         // Variável para armazenar os resultados atuais
         let resultadosAtuais = [];
 
-      const estoque127 = {
+     const estoque127 = {
   "dimensions": {
     "width": 680,
     "height": 2500
@@ -932,7 +932,7 @@
       "id": "cabinet-46",
       "type": "pequeno",
       "x": 172.90625,
-      "y": 812.9062805175781,
+      "y": 810.90625,
       "rotation": 90,
       "products": {}
     },
@@ -1027,8 +1027,8 @@
     {
       "id": "cabinet-58",
       "type": "pequeno",
-      "x": 231.6771240234375,
-      "y": 1430.6771240234375,
+      "x": 233.671875,
+      "y": 1431.671875,
       "rotation": 270,
       "products": {}
     },
@@ -1043,8 +1043,8 @@
     {
       "id": "cabinet-60",
       "type": "pequeno",
-      "x": 231.66668701171875,
-      "y": 1347.6771240234375,
+      "x": 232.65625,
+      "y": 1346.671875,
       "rotation": 270,
       "products": {}
     },
@@ -1466,6 +1466,8 @@
     }
   ]
 };
+
+// Para usar na página principal, cole este código
 
 // Para usar na página principal, cole este código
 
