--- a/adicionar.html
+++ b/adicionar.html
@@ -616,14 +616,26 @@
                 width: 100%;
                 position: relative;
                 height: auto;
-                padding: 15px;
+                padding: 10px;
+                box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            }
+
+            .logo {
+                padding: 10px 0;
+                margin-bottom: 15px;
             }
 
             .nav-menu {
                 display: flex;
-                gap: 10px;
+                gap: 5px;
                 overflow-x: auto;
-                padding-bottom: 10px;
+                padding: 5px 0;
+                scrollbar-width: none;
+                -ms-overflow-style: none;
+            }
+
+            .nav-menu::-webkit-scrollbar {
+                display: none;
             }
 
             .nav-item {
@@ -633,8 +645,23 @@
 
             .nav-link {
                 white-space: nowrap;
-                padding: 10px 15px;
-                font-size: 14px;
+                padding: 8px 12px;
+                font-size: 12px;
+                border-radius: 20px;
+                min-width: 120px;
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 4px;
+            }
+
+            .nav-link i {
+                font-size: 16px;
+            }
+
+            .nav-link span {
+                font-size: 10px;
             }
 
             .main-content {
